# shroudb-codegen

./: .gitignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS.md  README.md
.github/workflows/: ci.yml  generate.yml
src/: cli.rs  generator.rs  lib.rs  main.rs
src/http/: mod.rs  spec.rs
src/moat/: mod.rs  spec.rs
src/spec/: moat.rs  mod.rs  wire.rs
src/unified/: compat.rs  ir.rs  mod.rs
src/wire/: mod.rs  spec.rs
test-sandbox/: Makefile  run-tests.sh  test-auth-config.toml  test-chronicle-config.toml  test-cipher-config.toml  test-config.toml  test-courier-config.toml  test-forge-config.toml  test-keep-config.toml  test-mint-config.toml  test-pulse-config.toml  test-scroll-config.toml  test-sentry-config.toml  test-sigil-config.toml  test-stash-config.toml  test-transit-config.toml  test-veil-config.toml
test-sandbox/tests/: test_auth_go.go  test_auth_python.py  test_auth_ruby.rb  test_auth_typescript.ts  test_chronicle_go.go  test_chronicle_python.py  test_chronicle_ruby.rb  test_chronicle_typescript.ts  test_cipher_go.go  test_cipher_python.py  test_cipher_ruby.rb  test_cipher_typescript.ts  test_courier_go.go  test_courier_python.py  test_courier_ruby.rb  test_courier_typescript.ts  test_forge_go.go  test_forge_python.py  test_forge_ruby.rb  test_forge_typescript.ts  test_go.go  test_keep_go.go  test_keep_python.py  test_keep_ruby.rb  test_keep_typescript.ts  test_mint_go.go  test_mint_python.py  test_mint_ruby.rb  test_mint_typescript.ts  test_pulse_go.go  test_pulse_python.py  test_pulse_ruby.rb  test_pulse_typescript.ts  test_python.py  (+30 more)
(+55 files in other folders)
